Smoke-cycles-OpenvVDB Adding velocity attribute crashes render #48064

Closed
opened 2016-04-06 01:36:53 +02:00 by Nahuel Belich · 11 comments

System Information
Operating system and graphics card

Blender Version
Broken: 673ddd4

Short description of error
Set that atribute and crash on render
pasted_file

Exact steps for others to reproduce the error
1-smoke.blend
2-try render (it should crash)
3-open again
4-change velocity to color or density
5-render (now shouldn't crash on render)

**System Information** Operating system and graphics card **Blender Version** Broken: 673ddd4 **Short description of error** Set that atribute and crash on render ![pasted_file](https://archive.blender.org/developer/F300954/pasted_file) **Exact steps for others to reproduce the error** 1-[smoke.blend](https://archive.blender.org/developer/F300956/smoke.blend) 2-try render (it should crash) 3-open again 4-change velocity to color or density 5-render (now shouldn't crash on render)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
jack closed this issue 2016-04-06 01:55:46 +02:00
jack self-assigned this 2016-04-06 01:55:46 +02:00

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

@burton, please avoid closing task at random with no explantation as to why you're closing this.

@burton, please avoid closing task at random with no explantation as to why you're closing this.
jack was unassigned by Kévin Dietrich 2016-04-06 06:51:03 +02:00

Added subscriber: @burton

Added subscriber: @burton

The crash is due to an arithmetic exception thrown in the image interpolation code:

Program received signal SIGFPE, Arithmetic exception.

0x00000000032b46d1 in wrap_periodic (width=0, x=-1, this=<optimized out>)
    at /home/kevin/src/blender-git/blender/intern/cycles/kernel/./kernel_compat_cpu.h:113
113			x %= width;

Now the things is that only 'color', 'heat' and 'density' attributes/fields are supported in Cycles, but for some reason the 'velocity' attribute is still added and it crashes due to uninitialized data (would expect to have a nice pink/magenta volume instead, as for missing textures or images).

The crash is due to an arithmetic exception thrown in the image interpolation code: ``` Program received signal SIGFPE, Arithmetic exception. 0x00000000032b46d1 in wrap_periodic (width=0, x=-1, this=<optimized out>) at /home/kevin/src/blender-git/blender/intern/cycles/kernel/./kernel_compat_cpu.h:113 113 x %= width; ``` Now the things is that only 'color', 'heat' and 'density' attributes/fields are supported in Cycles, but for some reason the 'velocity' attribute is still added and it crashes due to uninitialized data (would expect to have a nice pink/magenta volume instead, as for missing textures or images).

This issue was referenced by 951fad2baa

This issue was referenced by 951fad2baa592b4dc5201d8630517e6a92a510d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@d79f2386e0

This issue was referenced by blender/cycles@d79f2386e0d80b9883c07f761151cae25a33b998
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48064
No description provided.